<resources>
    <string name="app_name">CIM+</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="view_homework">HCEs</string>
    <string name="baseurl">https://cim.phc.org.pk:8099/PHCCensusData.svc/</string>
<!--    <string name="baseurl">https://mobiletest.phc.org.pk:8099/PHCCensusData.svc/</string>-->
    <string name="CensusBaseUrl">https://census.phc.org.pk/assets</string>
    <string name="ftpbaseurl">cim.phc.org.pk</string>
    <string name="ftpUser">mobile</string>
    <string name="ftpPass">Document2</string>
    <string name="Imagesbaseurl">https://cim.phc.org.pk:9092/</string>

    <string name="token">7b00d46262f2fa9cc4730414660d6c452619881e34f272c3f1c07ad512bea0ae</string>
    <string name="header_value">TapdspMYvB50Y0ogCGOe3ZESTo97R4Cp98oC9zi+h+w=_5Bc</string>
    <string name="header_key">Authorization</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
    completions.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">Search Result</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_login">Login</string>
    <string name="detail_view">HCE Detail</string>
    <string name="action_summary">Action Report</string>
    <string name="title_activity_comments">Update</string>
    <string name="title_report_quack">Report New Quack</string>
    <string name="report_quack">Report Quack</string>
    <string name="case_register">Case Register</string>
    <string name="title_pws_search">PWS Search</string>
    <string name="no_data_found">No data found</string>
    <string name="about_us_text">Census Information Manager\n
Version: 1.3.2 \n
Powered by PHC ICT Team
</string>
    <string name="splash_bottom">Version 1.3.2 \n
    Powered by PHC-ICT Team\n
    All Rights Reserved\n
</string>

    <string name="nav_drawer_text">Census Information Manager\nPunjab Healthcare Commission
</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Not Registered</string>
    <string name="nav_movies">Registered</string>
    <string name="nav_notifications">Quack</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_location">Location</string>
    <string name="nav_about_us">About</string>
    <string name="nav_reset_password">Change Password</string>
    <string name="nav_action_summary">AQC Visits Stats</string>
    <string name="nav_action_status">My Visits</string>
    <string name="nav_visit_Plans">My Visit Plans</string>
    <string name="nav_InfoUpdate_History">Update History</string>
    <string name="nav_visit_title">Visits Summary</string>
    <string name="nav_hce_gallery">HCE Gallery</string>
    <string name="nav_aqc_visits">Plans List/Summary</string>
    <string name="nav_insp_visits">My Visits</string>
    <string name="nav_sub_actiontypes">Sub Types</string>
    <string name="nav_aqc_plansumm">Team Wise Visits Summary</string>

    <string name="about_CIM_text">CIM is official Android App developed with the aim to enable authorized PHC employees to access and manage Census Project data on the go. Source of all the information presented through this application is Census Project and HCE information available in PWS application.\n
    Key Features:\n
    a.    Search based on multiple filters\n
    b.    List and Map view\n
    c.    Status wise graphical presentation\n
    d.    Simplify access and update HCE information\n
    e.    Draw route to a particular HCE from current and custom location</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="nav_item_activity_titles">Census Information Manager</string>
    <string name="nav_item_filterresult_titles">Search Result</string>
    <string name="nav_item_Visit_Summary">Visits Detail</string>
    <string name="nav_item_Update_titles">HCE Detail - Edit Mode</string>
    <string name="nav_item_filter_titles">Filter Criteria</string>
    <string name="nav_item_Inspection_titles">Inspection Detail</string>
    <string name="nav_item_HCElist_titles">PWS HCEs List</string>
    <string name="nav_pwsview_titles">PWS HCE Detail</string>
    <string name="nav_item_BasicInfo_titles">Information Update Step-1</string>
    <string name="nav_item_action_titles">Action Detail Step-2</string>
    <string name="nav_item_action_history">Action History</string>
    <string name="nav_item_drawroute_titles">Route</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_case_register">Case Register</string>

    <string name="action_logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="todo">TODO</string>
    <string name="image_popup" />
    <string name="location_disclosure_title">Location Tracking Permission</string>
    <string name="location_disclosure_message">CIM+ collects location data to track your movements during field visits even when the app is closed or not in use. This data is essential for monitoring and reporting purposes by PHC.</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="openai_api_key">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</string>
</resources>
